[package]
name = "hocon"
version = "0.1.0"
edition = "2021"
description = "Full Lightbend HOCON specification-compliant parser for Rust"
license = "Apache-2.0"
repository = "https://github.com/o3co/rs.hocon"
keywords = ["hocon", "config", "configuration", "parser"]
categories = ["config", "parser-implementations"]

[dependencies]
indexmap = "2"
