[package]
name = "hocon-parser"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"
description = "Full Lightbend HOCON specification-compliant parser for Rust"
license = "Apache-2.0"
repository = "https://github.com/o3co/rs.hocon"
keywords = ["hocon", "config", "configuration", "parser", "rust"]
categories = ["config", "parser-implementations"]
readme = "README.md"

[lib]
name = "hocon"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
indexmap = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "parse_bench"
harness = false
